--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 :root {
   font-size: 16px;
-  
+
 
   --text-primary: rgb(39, 48, 67);
   --text-secondary: rgb(239, 246, 238);
@@ -17,7 +17,9 @@ body {
   background-color: white;
   margin: 0;
   padding: 0;
+  border: 0;
   font-family: 'Montserrat', sans-serif;
+  overscroll-behavior: none;
 }
 
 body::-webkit-scrollbar {
@@ -29,7 +31,70 @@ body::-webkit-scrollbar-track {
 }
 
 main {
+  width: 70vw;
+  max-width: 80em;
   margin-left: 5rem;
   padding: 1rem;
+  margin: 0 auto;
+
+  .section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+  }
+
+  #scrollPath {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 5px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+  }
+
+  #progressbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 5px;
+    border-radius: 5px;
+    background: linear-gradient(to top, #008aff, #00ffe7);
+    animation: animate 5s linear infinite;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to top, #008aff, #00ffe7);
+      filter: blur(10px);
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to top, #008aff, #00ffe7);
+      filter: blur(30px);
+
+    }
+  }
 }
 
+@keyframes animate {
+
+  0%,
+  100% {
+    filter: hue-rotate(0deg);
+  }
+
+  50% {
+    filter: hue-rotate(360deg);
+  }
+}
