--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -4,46 +4,76 @@
   height: 100vh;
   background-color: var(--bg-primary);
   transition: width 200ms ease;
-}
+  z-index: 100;
 
-.navbar:hover {
-  width: 16rem;
-}
+  &:hover {
+    width: 16rem;
 
-.navbar-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  // position: relative;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  height: 100%;
+    .logo svg {
+      transform: translateX(10em) rotate(180deg);
+    }
 
-  .nav-item {
-    width: 100%;
+    .link-text {
+      visibility: visible;
+      opacity: 1;
+      transition-delay: 1s;
+      transition: opacity .5s;
+      left: 0;
+    }
+
+    .logo-text {
+      opacity: 1;
+      transition: opacity 2s;
+    }
   }
-}
 
-.nav-link {
-  display: flex;
-  align-items: center;
-  position: relative;
-  height: 5rem;
-  color: var(--bg-secondary);
-  text-decoration: none;
-  filter: grayscale(100%) opacity(0.7);
-  transition: 20ms;
-  transition: var(--transition-speed);
+  .navbar-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 100%;
 
-  svg {
-    min-width: 2rem;
-    margin: 0 1.5rem;
+    .nav-item {
+      width: 100%;
+    }
+
+
+  }
+
+  .nav-link{
+    display: flex;
+    align-items: center;
+    position: relative;
+    height: 5rem;
+    color: var(--bg-secondary);
+    text-decoration: none;
+    filter: grayscale(100%) opacity(0.7);
+    transition: var(--transition-speed);
+    cursor: pointer;
+
+    &:hover {
+      filter: grayscale(0%) opacity(1);
+      background: var(--bg-secondary);
+      color: var(--text-secondary);
+    }
+
+    svg {
+      min-width: 2rem;
+      margin: 0 1.5rem;
+    }
+
+    .link-text {
+      visibility: hidden;
+      margin-left: 1rem;
+      opacity: 0;
+    }
   }
 }
 
 .logo {
-  // position: absolute;
   left: 0;
   font-weight: bold;
   text-transform: uppercase;
@@ -54,48 +84,23 @@
   font-size: 1.1rem;
   letter-spacing: 0.2ch;
   width: 100%;
-}
 
-.logo svg {
-  position: absolute;
-  height: 2.5em;
-  width: 2.5em;
-  transform: rotate(0deg);
-  transition: transform 300ms;
-}
+  .logo-text {
+    color: var(--text-secondary);
+    opacity: 0;
+  }
 
-.logo-text {
-  color: var(--text-secondary);
-  opacity: 0;
-  // transition-delay: opacity .5s;
-  // transition: opacity 0.5s;
-}
-
-.navbar:hover .logo svg {
-  transform: rotate(-180deg) translateY(-10em);
-}
-
-
-
-.nav-link:hover {
-  filter: grayscale(0%) opacity(1);
-  background: var(--bg-secondary);
-  color: var(--text-secondary);
-}
-
-.link-text {
-  visibility: hidden;
-  // display: none;
-  margin-left: 1rem;
-  opacity: 0;
-  // transition-delay: 1s;
-  // transition: 1s;
+  svg {
+    position: absolute;
+    height: 2.5em;
+    width: 2.5em;
+    transform: rotate(0deg);
+    transition: transform 200ms;
+  }
 }
 
 .navbar:hover .link-text {
   visibility: visible;
-  // display: block;
-  // position: relative;
   opacity: 1;
   transition-delay: 1s;
   transition: opacity .5s;
@@ -103,16 +108,9 @@
 }
 
 .navbar:hover .logo-text {
-  transition-delay: opacity 1s;
   opacity: 1;
   transition: opacity 2s;
 }
-
-.link-text:hover {
-  // display: none;
-  margin-left: 1rem;
-}
-
 
 .fa-primary {
   color: #ff7eee;
@@ -126,4 +124,3 @@
 .fa-secondary {
   transition: var(--transition-speed);
 }
-
