--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,12 +14,23 @@
 
 body {
   color: black;
-  background-color: white;
+  // background-color: white;
   margin: 0;
   padding: 0;
   border: 0;
   font-family: 'Montserrat', sans-serif;
   overscroll-behavior: none;
+}
+
+.particles {
+  position: fixed;
+  right: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100vh;
+  z-index: -1;
+  background-color: #2E294E;
 }
 
 body::-webkit-scrollbar {
@@ -43,48 +54,25 @@ main {
     justify-content: center;
     min-height: 100vh;
   }
+}
 
-  #scrollPath {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 5px;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.5);
-  }
+.container {
+  padding: 1.5rem;
+  margin: 2em 0;
+  border-radius: 10px;
+  background-image: linear-gradient(-128deg, rgba(255, 181, 32, 0.93) 3%, rgba(239, 39, 153, 0.93) 88%, rgba(237, 18, 171, 0.93) 100%);
+  opacity: .9;
+}
 
-  #progressbar {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 5px;
-    border-radius: 5px;
-    background: linear-gradient(to top, #008aff, #00ffe7);
-    animation: animate 5s linear infinite;
+h1,
+h2,
+h3 {
+  color: #FFC145;
+  font-size: 2em;
+}
 
-    &:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to top, #008aff, #00ffe7);
-      filter: blur(10px);
-    }
-
-    &:after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to top, #008aff, #00ffe7);
-      filter: blur(30px);
-
-    }
-  }
+p {
+  color: #F1E9DA;
 }
 
 @keyframes animate {
