--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -1,12 +1,11 @@
-.container {
-  padding: 1.5rem;
-  margin: 1.5em 0;
-  border: 2px solid black;
-  border-radius: 5px;
+.skills-wrap {
+  position: relative;
+  margin-top: 4em;
 
   h3 {
-    font-size: 1.5em;
     margin: 0;
+    top: -2em;
+    position: absolute;
   }
 
   .skills {
