--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,16 +1,9 @@
-
-
 .about-section {
   display: flex;
   flex-direction: row;
   justify-content: center;
   min-height: 100vh;
-  position: relative;
-
-  .sub-head {
-    position: absolute;
-    top: 3.5em;
-}
+  
 
   .about-container {
     height: fit-content;
@@ -20,6 +13,7 @@
 
     .interest-container {
       height: 80%;
+      position: relative;
 
       .interest {
         display: flex;
@@ -31,7 +25,6 @@
 
         p {
           text-align: center;
-
         }
       }
     }
@@ -66,12 +59,13 @@
 
     .interest {
       font-size: 1.2em;
-      transition: opacity 0.4s ease-in;
-      transition-delay: 0.4s;
+      transition: opacity 0.3s ease-in;
+      transition-delay: 0.3s;
       height: 100%;
+      width: 100%;
       margin: 0 auto;
       opacity: 1;
-      left: 0;
+      // left: 0;
       position: absolute;
     }
   }
