--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -2,14 +2,15 @@
   height: 80vh;
   position: relative;
 
-  h1{
+  h1 {
     position: absolute;
     top: -3em;
-    font-size: 32px;
+    // font-size: 2.5em;
   }
 
   h2 {
     margin: 1em 0;
+    font-size: 28px;
   }
 
   .contact-links {
